# practical-mlops-notes

./: .python-version  Makefile  README.md  pyproject.toml
ch01_introduction_to_mlops/pjt01_implementing_devops/: .coverage  Makefile  hello.py  requirements.txt
ch03_mlops_for_containers_and_edge_devices/creating_a_container/: Dockerfile
ch03_mlops_for_containers_and_edge_devices/serving_a_trained_model_over_http/: predict.py
ch03_mlops_for_containers_and_edge_devices/serving_a_trained_model_over_http/webapp/: app.py
ch06_monitoring_and_logging/: http-app.py
ch11_command_line_tools_and_microservices/: download_dataset.py  requirements.txt
ch11_command_line_tools_and_microservices/csv-linter/: setup.py
ch11_command_line_tools_and_microservices/csv-linter/csv_linter/: checks.py  main.py
